🐛 (rolename): update role name

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,4 +1,5 @@
 galaxy_info:
+  role_name: fluentbit
   author: Anurak Jannawan
   description: Ansible to install and configure fluentbit
   company: Opsta Thailand Co,.Ltd.
