🐛 (bug): fix include vars

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,8 +2,8 @@
 - name: Gather variables for each operating system
   include_vars: "{{ item }}"
   with_first_found:
-    - "{{ ansible_distribution }}.yml"
-    - "{{ ansible_os_family }}.yml"
+    - "{{ ansible_distribution|lower }}.yml"
+    - "{{ ansible_os_family|lower }}.yml"
   tags:
     - fluentbit_configure
     - fluentbit_install
